# LauncherTweaks

./: Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: main.yml
src/: blowfish.rs  config.rs  lib.rs  utilities.rs
