[package]
name = "LauncherTweaks"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]
name = "version"

[dependencies]
skidscan = { version = "2.0", default-features = false }
proxy-dll = { git = "https://github.com/redstrate/dll-proxy-rs/", default-features = false } # needed to cross-compile from Linux
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_System_SystemServices", "Win32_UI_WindowsAndMessaging"], default-features = false }
serde = { version = "1.0", features = ["derive"], default-features = false }
toml = { version = "0.8", features = ["parse"], default-features = false }
